# insight

./: .gitignore  .prettierrc  CLAUDE.md  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  vite.config.js  vitest.config.ts
.claude/commands/: issue.md
.github/workflows/: docs.yml  release.yml
.husky/: pre-commit
crates/insight-core/: Cargo.toml
crates/insight-core/src/: config.rs  conversations.rs  embeddings.rs  lib.rs  manager.rs  models.rs
crates/insight-core/src/agent/: mod.rs  provider.rs  tools.rs
crates/insight-core/src/agent/provider/: anthropic.rs  local.rs  openai.rs
crates/insight-core/src/jobs/: embed.rs  extract.rs  import.rs  index.rs  mod.rs  processing.rs  types.rs  watcher.rs
crates/insight-core/src/pdf/: extractor.rs  mod.rs
crates/insight-core/src/pipeline/: embed.rs  mod.rs  ocr.rs  progress.rs  types.rs  watcher.rs  workers.rs
crates/insight-core/src/provider/: chat.rs  config.rs  embedding.rs  mod.rs  ocr.rs
crates/insight-core/src/provider/local/: chat.rs  embedding.rs  mod.rs  ocr.rs  state.rs
crates/insight-core/src/provider/remote/: anthropic.rs  mod.rs  openai.rs
crates/insight-core/src/search/: index_worker.rs  mod.rs
crates/insight-core/src/storage/: mod.rs
docs/: book.toml  build.sh
docs/src/: SUMMARY.md  architecture.md  chat.md  collections.md  custom.css  data-model.md  development.md  getting-started.md  index.md  platform-detect.js  releases.js
docs/theme/: head.hbs
src/: app.css  app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: cli.rs  commands.rs  error.rs  headless.rs  lib.rs  main.rs
src-tauri/src/commands/: collections.rs  conversations.rs  documents.rs  mod.rs  models.rs  providers.rs  tests.rs
src-tauri/src/core/: config.rs  conversations.rs  embeddings.rs  mod.rs  models.rs
src-tauri/src/core/agent/: mod.rs  tools.rs
src-tauri/src/core/jobs/: embed.rs  extract.rs  index.rs  mod.rs  types.rs  watcher.rs  worker.rs
src-tauri/src/core/pdf/: extractor.rs
src-tauri/src/core/search/: mod.rs
src-tauri/src/core/storage/: mod.rs
src/lib/components/: BootDownloader.svelte  BootLoader.svelte  Breadcrumb.svelte  Breadcrumb.test.ts  Button.svelte  CenteredLayout.svelte  Chat.svelte  CollectionFilter.svelte  ConversationSidebar.svelte  ConversationSidebar.test.ts  DownloadProgress.svelte  EmbeddingModelSelector.svelte  ErrorAlert.svelte  FilterSidebar.svelte  GhostInput.svelte  Input.svelte  LifecycleSettings.svelte  LoadingSpinner.svelte  Markdown.svelte  ModelDownloadSelector.svelte  ModelSelector.svelte  ProviderSelector.svelte  Settings.svelte  SetupWizard.svelte  Sidebar.svelte
src/lib/models/: config.ts
src/lib/stores/: collections.svelte.ts  conversations.svelte.ts  import-state.svelte.ts  model-downloads.svelte.ts  model-state.svelte.ts  provider-state.svelte.ts
src/routes/: +page.svelte
src/routes/(app)/: +layout.svelte  layout.test.ts
src/routes/(app)/files/: +layout.svelte  +page.svelte
src/routes/(app)/files/[collectionId]/: +page.svelte
src/routes/(app)/files/[collectionId]/[documentId]/: +page.svelte
src/routes/(app)/research/: +page.svelte
src/routes/(app)/search/: +page.svelte  page.test.ts
src/routes/(app)/trajectory/: +page.svelte
src/routes/files/[collectionId]/[documentId]/: +page.svelte
src/tests/: setup.ts
src/tests/mocks/: app-paths.ts  app-stores.ts
