[package]
name = "insight"
version = "0.1.0"
description = "Local-first P2P document search for journalists"
authors = ["you"]
edition = "2021"

[lib]
name = "insight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# iroh P2P
iroh = "0.95"
iroh-blobs = "0.97"
iroh-docs = "0.95"
iroh-gossip = "0.95"
iroh-io = "0.6"

# PDF processing
lopdf = "0.38"

# Search (milli from meilisearch)
# Note: milli includes candle for embeddings internally; cuda feature enables GPU for embeddings
milli = { git = "https://github.com/meilisearch/meilisearch.git", tag = "v1.30.1" }
bumpalo = "3"  # Required by milli's indexing API

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"

# Random
rand = "0.9"

# LLM inference
mistralrs = { git = "https://github.com/EricLBuehler/mistral.rs" }
hf-hub = { version = "0.4", features = ["tokio"] }
tokio-stream = "0.1"
tokio-util = "0.7"

# Text chunking for embeddings
text-splitter = { version = "0.28", features = ["tokenizers"] }
tokenizers = "0.22"

# Utilities
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6"
clap = { version = "4", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
headless = []
# GPU/accelerated builds (optional; CPU-only by default)
cuda = ["mistralrs/cuda", "mistralrs/flash-attn", "mistralrs/cudnn"]
flash-attn = ["mistralrs/flash-attn"]
cudnn = ["mistralrs/cudnn"]
metal = ["mistralrs/metal"]
accelerate = ["mistralrs/accelerate"]
mkl = ["mistralrs/mkl"]

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
