[package]
name = "insight"
version = "0.3.0"
description = "Local-first P2P document search for journalists"
authors = ["you"]
edition = "2021"
license = "AGPL-3.0-only"

[lib]
name = "insight_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core business logic
insight-core = { path = "../crates/insight-core" }

# Tauri
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"

# Async runtime (needed for Tauri command layer)
tokio = { version = "1", features = ["full"] }

# iroh types (needed for NamespaceId parsing in commands)
iroh-blobs = "0.97"
iroh-docs = "0.95"

# milli types (needed for score_details in search command)
milli = { git = "https://github.com/meilisearch/meilisearch.git", tag = "v1.30.1" }

# Serialization (for command layer types)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling (anyhow used by insight-core)
anyhow = "1"

# Utilities
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }

[features]
default = []
# GPU/accelerated builds (optional; CPU-only by default)
cuda = ["insight-core/cuda"]
flash-attn = ["insight-core/flash-attn"]
cudnn = ["insight-core/cudnn"]
metal = ["insight-core/metal"]
accelerate = ["insight-core/accelerate"]
mkl = ["insight-core/mkl"]

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }
lopdf = "0.38"
